--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf8">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -22,6 +22,6 @@
              </p>
              <img class="patrick" src="patrick.png">
         </section>
-        <script src="index.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
