--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <title>r3ddy</title>
+        <link rel="icon" href="images/patrick.png" type="image/icon type">
         <h1 class=mainTitle>r3ddy</h1>
+        <hr class="solid">
     </head>
     <body>
         <div class="splash">
@@ -17,11 +19,14 @@
         <section class="description">
             <p>Hi! my name is r3ddy. My real name is Patrick<br>
                 I'm from Italy. My birthday is on 7th June<br>
-                I'm not a pro player like Loryvax but <br>
-                videogames are funny so i like to play them
+                I develop with Python <img class="pythonimage" src="images/pythonimg.png"><br>
+                and with C#
              </p>
-             <img class="patrick" src="patrick.png">
+             <img class="patrickimage" src="images/patrick.png">
+             <hr class="solid">
+             <p class="cp">©r3ddy all rights reserved</p>
         </section>
+        
         <script src="main.js"></script>
     </body>
 </html>
