--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="utf8">
-    <link rel="stylesheet" href="projects.css">
-    <title>r3ddy - My Projects</title>
-</head>
+<html lang="en">
+    <head>
+        <meta charset="utf8">
+        <link rel="stylesheet" href="main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+        <title>r3ddy</title>
+        <link rel="icon" href="images/patrick.png" type="image/icon type">
+        <h1 class=mainTitle>r3ddy</h1>
+        <a class=navBar href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
+        <a class=navBar href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
+        <hr class="solid">
+    </head>
+    <body>
+        <img class="pokemonBotGif" src="images/pokemonbot.gif"><br>
+        <form action="https://github.com/Superredstone/Pokemon-Discord-Bot">
+            <button class="pokemonBotButton" href="https://github.com/Superredstone/Pokemon-Discord-Bot">Discord Pokémon Bot</button>
+        </form>
+
+        <section class="description">
+            <hr class="bottomLine">
+            <script class="cp">
+                let date =  new Date().getFullYear();
+                document.write("©" + date + " r3ddy")
+            </script>
+        </section>
+    </body>
+</html>
