--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <title>r3ddy</title>
         <link rel="icon" href="images/patrick.png" type="image/icon type">
         <h1 class=mainTitle>r3ddy</h1>
-        <a class=navBar href="projects.html">My Projects</a>
+        <a class=navBar href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
+        <a class=navBar href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
         <hr class="solid">
     </head>
     <body>
@@ -19,13 +20,12 @@
 
         <section class="description">
             <p>Hi! my name is r3ddy. My real name is Patrick<br>
-                I'm from Italy. My birthday is on 7th June<br>
-                I develop with Python <img class="pythonimage" src="images/pythonimg.png"><br>
-                and with C#
+                I'm from Italy. My birthday is on 7th June.<br>
+                I develop for passion with Python and with C#
              </p>
              <img class="patrickimage" src="images/patrick.png">
              <hr class="solid">
-             <script class=cp>
+             <script class="cp">
                 let date =  new Date().getFullYear();
                 document.write("©" + date + " r3ddy")
              </script>
