--- a/projects.html
+++ b/projects.html
@@ -14,10 +14,12 @@
         <hr class="solid">
     </head>
     <body>
-        <img class="pokemonBotGif" src="images/pokemonbot.gif"><br>
-        <form action="https://github.com/Superredstone/Pokemon-Discord-Bot">
-            <button class="pokemonBotButton" href="https://github.com/Superredstone/Pokemon-Discord-Bot">Discord Pokémon Bot</button>
-        </form>
+        <div class="pokemonBotRect">
+            <img class="pokemonBotGif" src="images/pokemonbot.gif"><br>
+            <form action="https://github.com/Superredstone/Pokemon-Discord-Bot">
+                <button class="pokemonBotButton" href="https://github.com/Superredstone/Pokemon-Discord-Bot">Discord Pokémon Bot</button>
+            </form>
+        </div>
 
         <section class="description">
             <hr class="bottomLine">
