Added borders between copyright and line

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         </div>
 
         <section class="description">
-            <hr class="bottomLine">
+            <hr class="solid">
             <script class="cp">
                 let date =  new Date().getFullYear();
                 document.write("©" + date + " r3ddy")
