--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         <hr class="solid">
     </head>
     <body>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 1000px; position: center; margin: auto;">
             <div class="col">
               <div class="card">
                 <img src="images/pokemonbot.gif" class="card-img-top" alt="...">
@@ -28,24 +28,26 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">  
+                <img src="images/pokemonbot.gif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">WIP</h5>
                   <p class="card-text">WIP.</p>
+                  <a href="" class="btn btn-primary">Placeholder button</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/pokemonbot.gif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">WIP</h5>
                   <p class="card-text">WIP.</p>
+                  <a href="" class="btn btn-primary">Placeholder button</a>
                 </div>
               </div>
             </div>
           </div>
-          
+
 
         <section class="description">
             <hr class="bottomLine">
