--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <title>r3ddy</title>
         <link rel="icon" href="images/patrick.png" type="image/icon type">
-        <h1 class=mainTitle>r3ddy</h1>
-        <a class=navBar href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
-        <a class=navBar href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
-        <hr class="solid">
+        <div class="navBar">
+          <h1 class="mainTitle">r3ddy</h1>
+          <a class="navBar" href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
+          <a class="navBar" href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
+          <hr class="solid">
+        </div>
     </head>
     <body>
         <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 1000px; position: center; margin: auto;">
@@ -28,11 +30,11 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="images/pokemonbot.gif" class="card-img-top" alt="...">
+                <img src="images/covidmonitor.gif" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">WIP</h5>
-                  <p class="card-text">WIP.</p>
-                  <a href="" class="btn btn-primary">Placeholder button</a>
+                  <h5 class="card-title">Covid Status Discord (WIP)</h5>
+                  <p class="card-text">Discord bot made in Python for searching italian covid stats.</p>
+                  <a href="" class="btn btn-primary">GitHub Page</a>
                 </div>
               </div>
             </div>
