--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <title>r3ddy</title>
         <link rel="icon" href="images/patrick.png" type="image/icon type">
-        <h1 class=mainTitle>r3ddy</h1>
-        <a class=navBar href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
-        <a class=navBar href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
-        <hr class="solid">
+        <div class="navBar">
+          <h1 class="mainTitle">r3ddy</h1>
+          <a class="navBar" href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
+          <a class="navBar" href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
+          <hr class="solid">
+        </div>
     </head>
     <body>
         <div class="splash">
@@ -31,7 +33,7 @@
                 document.write("©" + date + " r3ddy")
              </script>
         </section>
-        
+
         <script src="main.js"></script>
     </body>
 </html>
