GitHub page for covid status set to wip

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Covid Status Discord (WIP)</h5>
                   <p class="card-text">Discord bot made in Python for searching italian covid stats.</p>
-                  <a href="" class="btn btn-primary">GitHub Page</a>
+                  <a href="" class="btn btn-primary">GitHub Page (Currently unavabile)</a>
                 </div>
               </div>
             </div>
