Added social category

--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <title>r3ddy</title>
         <link rel="icon" href="images/patrick.png" type="image/icon type">
-        <div class="navBar">
-          <h1 class="mainTitle">r3ddy</h1>
-          <a class="navBar" href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
-          <a class="navBar" href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
-          <hr class="solid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">r3ddy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link" href="projects.html">My Projects</a>
+        <a class="nav-link" href="social.html">Social</a>
         </div>
+        </div>
+        </div>
+        </nav>
+
     </head>
     <body>
-        <div class="splash">
-            <h1 class="fade-in">Welcome to my website</h1>
-        </div>
-
         <section class="description">
             <p>Hi! my name is r3ddy. My real name is Patrick<br>
                 I'm from Italy. My birthday is on 7th June.<br>
@@ -34,6 +40,5 @@
              </script>
         </section>
 
-        <script src="main.js"></script>
     </body>
 </html>
