--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <title>r3ddy</title>
         <link rel="icon" href="images/patrick.png" type="image/icon type">
-        <div class="navBar">
-          <h1 class="mainTitle">r3ddy</h1>
-          <a class="navBar" href="index.html">Home&nbsp;&nbsp;&nbsp;</a>
-          <a class="navBar" href="projects.html">My Projects&nbsp;&nbsp;&nbsp;</a>
-          <hr class="solid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">r3ddy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link" href="projects.html">My Projects</a>
+        <a class="nav-link" href="social.html">Social</a>
         </div>
+        </div>
+        </div>
+        </nav>
     </head>
     <body>
         <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 1000px; position: center; margin: auto;">
