--- a/social.html
+++ b/social.html
@@ -17,15 +17,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+    <a class="nav-link" href="index.html">Home</a>
     <a class="nav-link" href="projects.html">My Projects</a>
-    <a class="nav-link" href="social.html">Social</a>
+    <a class="nav-link active" aria-current="page" href="social.html">Social</a>
     </div>
     </div>
     </div>
     </nav>
   </head>
   <body>
+    <button type="button" class="btn btn-dark" style="position: ;">GitHub</button>
+
     <section class="description">
         <hr class="bottomLine">
         <script class="cp">
