Socials are now usable!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         <a class="nav-link" href="projects.html">My Projects</a>
-        <a class="nav-link" href="social.html">Social</a>
+        <a class="nav-link" href="social.html">Socials</a>
         </div>
         </div>
         </div>
@@ -28,7 +28,7 @@
     </head>
     <body>
         <section class="description">
-            <p>Hi! my name is r3ddy. My real name is Patrick<br>
+            <p class="descriptionText">Hi! my name is r3ddy. My real name is Patrick<br>
                 I'm from Italy. My birthday is on 7th June.<br>
                 I develop for passion with Python and with C#
              </p>
