--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
         <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link active" aria-current="page" href="projects.html">My Projects</a>
-        <a class="nav-link" href="social.html">Social</a>
+        <a class="nav-link" href="social.html">Socials</a>
         </div>
         </div>
         </div>
