--- a/social.html
+++ b/social.html
@@ -19,16 +19,22 @@
     <div class="navbar-nav">
     <a class="nav-link" href="index.html">Home</a>
     <a class="nav-link" href="projects.html">My Projects</a>
-    <a class="nav-link active" aria-current="page" href="social.html">Social</a>
+    <a class="nav-link active" aria-current="page" href="social.html">Socials</a>
     </div>
     </div>
     </div>
     </nav>
   </head>
   <body>
-    <button type="button" class="btn btn-dark" style="position: ;">GitHub</button>
 
     <section class="description">
+      <div>
+        <br>
+        <a href="https://www.instagram.com/superredstone19/" class="btn btn-danger">Instagram</a> <br> <br>
+        <a href="https://github.com/Superredstone/" class="btn btn-secondary">GitHub</a> <br> <br>
+        <a href="https://twitch.tv/superredstone123" class="btn btn-primary">Twitch</a> <br> <br>
+
+      </div>
         <hr class="bottomLine">
         <script class="cp">
             let date =  new Date().getFullYear();
