--- a/social.html
+++ b/social.html
@@ -31,6 +31,7 @@
       <div>
         <br>
         <a href="https://www.instagram.com/superredstone19/" class="btn btn-danger">Instagram</a> <br> <br>
+        <a href="https://discord.gg/8RTMGZq8br" class="btn btn-dark">Discord</a><br><br>
         <a href="https://github.com/Superredstone/" class="btn btn-secondary">GitHub</a> <br> <br>
         <a href="https://twitch.tv/superredstone123" class="btn btn-primary">Twitch</a> <br> <br>
 
