Covid stats discord now online

--- a/projects.html
+++ b/projects.html
@@ -41,9 +41,9 @@
               <div class="card">
                 <img src="images/covidmonitor.gif" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Covid Status Discord (WIP)</h5>
-                  <p class="card-text">Discord bot made in Python for searching italian covid stats.</p>
-                  <a href="" class="btn btn-primary">GitHub Page (Currently unavabile)</a>
+                  <h5 class="card-title">Covid Status Discord</h5>
+                  <p class="card-text">Discord bot made in Python for searching italian covid statistics.</p>
+                  <a href="https://github.com/Superredstone/Covid-Stats-Discord" class="btn btn-primary">GitHub Page</a>
                 </div>
               </div>
             </div>
