--- a/projects.html
+++ b/projects.html
@@ -51,9 +51,9 @@
               <div class="card">
                 <img src="images/pokemonbot.gif" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">WIP</h5>
+                  <h5 class="card-title">Currently working on a chat bot for Twitch</h5>
                   <p class="card-text">WIP.</p>
-                  <a href="" class="btn btn-primary">Placeholder button</a>
+                  <a href="" class="btn btn-primary">GitHub Page (unavabile)</a>
                 </div>
               </div>
             </div>
