--- a/projects.html
+++ b/projects.html
@@ -41,32 +41,22 @@
               <div class="card">
                 <img src="images/covidmonitor.gif" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Covid Status Discord (WIP)</h5>
+                  <h5 class="card-title">Covid Status Discord</h5>
                   <p class="card-text">Discord bot made in Python for searching italian covid stats.</p>
-                  <a href="" class="btn btn-primary">GitHub Page (Currently unavabile)</a>
+                  <a href="https://github.com/Superredstone/Covid-Stats-Discord" class="btn btn-primary">GitHub Page</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="images/pokemonbot.gif" class="card-img-top" alt="...">
+                <img src="images/fucku_sh.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">WIP</h5>
-                  <p class="card-text">WIP.</p>
-                  <a href="" class="btn btn-primary">Placeholder button</a>
+                  <h5 class="card-title">fucku_sh</h5>
+                  <p class="card-text">Esoteric interpreted programming language.</p>
+                  <a href="https://github.com/Superredstone/fucku_sh" class="btn btn-primary">GitHub Page</a>
                 </div>
               </div>
             </div>
           </div>
-
-
-        <section class="description">
-            <hr class="bottomLine">
-            <script class="cp">
-                let date =  new Date().getFullYear();
-                document.write("©" + date + " r3ddy")
-            </script>
-        </section>
-
     </body>
 </html>
