--- a/index.html
+++ b/index.html
@@ -28,16 +28,12 @@
     </head>
     <body>
         <section class="description">
-            <p class="descriptionText">Hi! my name is r3ddy. My real name is Patrick<br>
-                I'm from Italy. My birthday is on 7th June.<br>
-                I develop for passion with Python and with C#
-             </p>
+            <div>
+            <p class="descriptionText">
+                Hi! I'm from Italy and i develop for passion. <br>
+                My favourite programming language are Python, C# and Go. I hate JS
+             </p></div>
              <img class="patrickimage" src="images/patrick.png">
-             <hr class="solid">
-             <script class="cp">
-                let date =  new Date().getFullYear();
-                document.write("©" + date + " r3ddy")
-             </script>
         </section>
 
     </body>
