--- a/projects.html
+++ b/projects.html
@@ -25,31 +25,31 @@
         <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 1000px; position: center; margin: auto;">
             <div class="col">
               <div class="card">
-                <img src="images/pokemonbot.gif" class="card-img-top" alt="...">
+                <img src="https://github.com/Superredstone/Random-Good-Hanime/raw/Main/Images/catGirl.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Pokémon Discord Bot</h5>
-                  <p class="card-text">Discord bot made in Python. It retrieves Pokémon informations.</p>
-                  <a href="https://github.com/Superredstone/Pokemon-Discord-Bot" class="btn btn-primary">GitHub Page</a>
+                  <h5 class="card-title">Random-Good-Hanime</h5>
+                  <p class="card-text">Telegram bot for watching hentais (Created for educational purpose).</p>
+                  <a href="https://github.com/Superredstone/Random-Good-Hanime" class="btn btn-primary">GitHub Page</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="images/covidmonitor.gif" class="card-img-top" alt="...">
+                <img src="https://github.com/Superredstone/Port-Scanner/raw/main/assets/icon.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Covid Status Discord</h5>
-                  <p class="card-text">Discord bot made in Python for searching italian covid stats.</p>
-                  <a href="https://github.com/Superredstone/Covid-Stats-Discord" class="btn btn-primary">GitHub Page</a>
+                  <h5 class="card-title">Port Scanner</h5>
+                  <p class="card-text">Cross platform port scanner written in Go.</p>
+                  <a href="https://github.com/Superredstone/Port-Scanner" class="btn btn-primary">GitHub Page</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="images/fucku_sh.png" class="card-img-top" alt="...">
+                <img src="https://github.com/Superredstone/youtubeDownloaderGo/raw/master/Assets/Download.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">fucku_sh</h5>
-                  <p class="card-text">Esoteric interpreted programming language.</p>
-                  <a href="https://github.com/Superredstone/fucku_sh" class="btn btn-primary">GitHub Page</a>
+                  <h5 class="card-title">YoutubeDownloader Go GUI</h5>
+                  <p class="card-text">GUI Implementation of the YoutubeDownloaderGo library.</p>
+                  <a href="https://github.com/Superredstone/YoutubeDownloaderGoGUI" class="btn btn-primary">GitHub Page</a>
                 </div>
               </div>
             </div>
